// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hoard.rollHoard — snapshot per band (rng=0.5) > band 0-4 1`] = `
{
  "coins": {
    "cp": 500,
    "ep": 0,
    "gp": 25,
    "pp": 0,
    "sp": 400,
  },
  "gemsByTier": {
    "10": 2,
    "100": 0,
    "1000": 0,
    "50": 0,
    "500": 0,
    "5000": 0,
  },
  "magicItemsByRarity": {
    "common": 2,
    "legendary": 0,
    "rare": 0,
    "uncommon": 0,
    "very-rare": 0,
  },
}
`;

exports[`hoard.rollHoard — snapshot per band (rng=0.5) > band 5-10 1`] = `
{
  "coins": {
    "cp": 0,
    "ep": 0,
    "gp": 400,
    "pp": 25,
    "sp": 800,
  },
  "gemsByTier": {
    "10": 0,
    "100": 0,
    "1000": 0,
    "50": 3,
    "500": 0,
    "5000": 0,
  },
  "magicItemsByRarity": {
    "common": 0,
    "legendary": 0,
    "rare": 0,
    "uncommon": 3,
    "very-rare": 0,
  },
}
`;

exports[`hoard.rollHoard — snapshot per band (rng=0.5) > band 11-16 1`] = `
{
  "coins": {
    "cp": 0,
    "ep": 0,
    "gp": 1600,
    "pp": 160,
    "sp": 0,
  },
  "gemsByTier": {
    "10": 0,
    "100": 0,
    "1000": 0,
    "50": 0,
    "500": 5,
    "5000": 0,
  },
  "magicItemsByRarity": {
    "common": 0,
    "legendary": 0,
    "rare": 4,
    "uncommon": 0,
    "very-rare": 0,
  },
}
`;

exports[`hoard.rollHoard — snapshot per band (rng=0.5) > band 17+ 1`] = `
{
  "coins": {
    "cp": 0,
    "ep": 0,
    "gp": 4000,
    "pp": 800,
    "sp": 0,
  },
  "gemsByTier": {
    "10": 0,
    "100": 0,
    "1000": 6,
    "50": 0,
    "500": 0,
    "5000": 0,
  },
  "magicItemsByRarity": {
    "common": 0,
    "legendary": 0,
    "rare": 0,
    "uncommon": 0,
    "very-rare": 6,
  },
}
`;
